unpackaged/main/default/objects/pse__Timecard_API_Settings__c/pse__Timecard_API_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Manages timecards sent to a third-party application.</description>
    <label>Timecard API Settings</label>
</CustomObject>