unpackaged/main/default/objects/pse__Timecard_API_Settings__c/fields/pse__Earnings_Code_Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Earnings_Code_Project__c</fullName>
    <description>The API name of the field used to send earnings code information through the PSA Timecards API for timecards logged against global projects.</description>
    <inlineHelpText>The API name of the field used to send earnings code information through the PSA Timecards API for timecards logged against global projects.</inlineHelpText>
    <label>Earnings Code (Project)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>