unpackaged/main/default/objects/pse__Timecard_API_Settings__c/fields/pse__Exclude_Project_Type_From_Post_Response__c.field-meta.xml
<CustomField>
    <fullName>pse__Exclude_Project_Type_From_Post_Response__c</fullName>
    <description>Uses Project Type to filter out timecards from the response. The value is a comma separated list of project types.</description>
    <inlineHelpText>Uses Project Type to filter out timecards from the response. The value is a comma separated list of project types.</inlineHelpText>
    <label>Exclude Project Type from POST Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>